# Cpp_with_VSCode

./: CMakeLists.txt  Makefile  README.md  compile_commands.json  hello.cpp
src/: boo.cpp  boo.hpp
